feat: Add file downloader

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+  scroll-behavior: smooth;
+}
+
 @font-face {
   font-family: 'Anderson Grotesk';
   src: local('Anderson Grotesk'), 
