style: add content colors

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -21,7 +21,7 @@ html, body {
 }
 
 #nprogress .bar {
-  background-color: #6E56CF;
+  background-color: #5373E7;
   height: 4px;
 
   position: fixed;
