--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,22 +1,30 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html, body {
   scroll-behavior: smooth;
 }
 
 @font-face {
-  font-family: 'Anderson Grotesk';
-  src: local('Anderson Grotesk'), 
-    url('./fonts/anderson-grotesk.woff2') format('woff2');
+  font-family: 'Atkinson Hyperlegible';
+  src: local('Atkinson Hyperlegible'),
+    local('Atkinson-Hyperlegible'),
+    local('Atkinson-Hyperlegible-Regular'),
+    url('./fonts/atkinson-hyperlegible.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Anderson Grotesk';
-  src: local('Anderson Grotesk'),
-    url('./fonts/anderson-grotesk-bold.woff2') format('woff2');
+  font-family: 'PretendardStd';
+  src: local('Atkinson Hyperlegible'),
+    local('Atkinson-Hyperlegible'),
+    local('Atkinson-Hyperlegible-bold'),
+    url('./fonts/atkinson-hyperlegible-bold.woff2') format('woff2');
   font-weight: 700;
-  font-style: normal;
+  font-style: normal;   
   font-display: swap;
 }
 
